# boris

./: .dockerignore  .gitignore  .gitmodules  .projectile  LICENSE  README.md  boris-git.toml  boris.cabal  boris.toml  master.toml
boris-build/: boris-build.cabal  boris-build.lock-7.10.2  boris-build.lock-7.10.3  boris-build.lock-7.8.4  boris-build.lock-8.0.2  boris-build.lock-8.2.2  boris-build.submodules  master.toml
boris-build/src/Boris/: Build.hs
boris-build/test/: test-io.hs  test.hs
boris-build/test/Test/IO/Boris/: Build.hs
boris-client/: boris-client.cabal  boris-client.lock-7.10.2  boris-client.lock-7.10.3  boris-client.lock-7.8.4  boris-client.lock-7.8.4~HEAD  boris-client.lock-7.8.4~fixup! fixup! fixup! fixup! Seven Ten.  boris-client.lock-8.0.2  boris-client.lock-8.2.2  boris-client.submodules  master.toml
boris-client/main/: boris.hs
boris-client/src/Boris/Client/: Build.hs  Config.hs  Data.hs  Discover.hs  Error.hs  Http.hs  Log.hs  Network.hs  Project.hs  Queue.hs  Request.hs  Response.hs  Scoreboard.hs  Validate.hs
boris-client/src/Boris/Client/Serial/: Decode.hs  Encode.hs
boris-client/test/: test.hs
boris-core/: boris-core.cabal  boris-core.lock-7.10.2  boris-core.lock-7.8.4  boris-core.lock-8.0.2  boris-core.lock-8.2.1  boris-core.lock-8.2.2  boris-core.lock-8.4.4  master.toml
boris-core/src/Boris/: Prelude.hs
boris-core/src/Boris/Core/: Data.hs
boris-core/src/Boris/Core/Data/: Agent.hs  Build.hs  Configuration.hs  Core.hs  Discover.hs  Instance.hs  Keyed.hs  Log.hs  Owner.hs  Project.hs  Repository.hs  Run.hs  Tenant.hs  Time.hs  Workspace.hs
boris-core/src/Boris/Core/Serial/: Command.hs  Ref.hs  (+1 more)
boris-core/src/Boris/Prelude/: EitherT.hs
boris-core/test/: boris-core-test.cabal  test.hs
boris-git/: boris-git.cabal  boris-git.lock-7.10.2  boris-git.lock-7.10.3  boris-git.lock-7.8.4  boris-git.lock-7.8.4~fixup! fixup! fixup! fixup! Seven Ten.  boris-git.lock-8.0.1  boris-git.lock-8.0.2  boris-git.lock-8.2.2
boris-git/src/Boris/: Git.hs
boris-git/src/Boris/Git/: Pin.hs  X.hs
boris-git/test/: test-io.hs  test.hs
boris-http/: Caddyfile  Dockerfile  Dockerfile.dev  boris-http.cabal  boris-http.lock-7.10.2  boris-http.lock-7.10.3  boris-http.lock-7.8.4  boris-http.lock-8.0.1  boris-http.lock-8.0.2  boris-http.lock-8.2.1  boris-http.lock-8.2.2  boris-http.submodules  master.toml
boris-http/assets/css/: boris.css  scoreboard.css
boris-http/assets/js/: updateSelf.js
boris-http/css/: boris.css
boris-http/demo/: Boris.Http.Template.Examples.Layout.Page.html
boris-http/examples/: Boris.Http.Template.Examples.Layout.Page.html  Boris.Http.Template.Examples.Page.Build.Ko.html  Boris.Http.Template.Examples.Page.Build.Ok.html  Boris.Http.Template.Examples.Page.Build.Undecided.html  Boris.Http.Template.Examples.Page.Build.html  Boris.Http.Template.Examples.Page.Builds.Standard.html  Boris.Http.Template.Examples.Page.Commit.Standard.html  Boris.Http.Template.Examples.Page.Configure.Standard.html  Boris.Http.Template.Examples.Page.Dashboard.Standard.html  Boris.Http.Template.Examples.Page.Error.Standard.html  Boris.Http.Template.Examples.Page.Login.Standard.html  Boris.Http.Template.Examples.Page.Newproject.AlreadExists.html  Boris.Http.Template.Examples.Page.Newproject.InvalidName.html  Boris.Http.Template.Examples.Page.Newproject.InvalidRepository.html  Boris.Http.Template.Examples.Page.Newproject.Standard.html  Boris.Http.Template.Examples.Page.Project.Standard.html  Boris.Http.Template.Examples.Page.Projects.Standard.html  Boris.Http.Template.Examples.Page.Scoreboard.Ko.html  Boris.Http.Template.Examples.Page.Scoreboard.Ok.html  Boris.Http.Template.Examples.Page.Settings.Standard.html  Boris.Http.Template.Examples.Page.Status.Standard.html
boris-http/main/: boris-http-readonly.hs  boris-http.hs
boris-http/src/Boris/: Http.hs
boris-http/src/Boris/Http/: Airship.hs  BMX.hs  Boot.hs  Config.hs  Data.hs  Form.hs  Repository.hs  Route.hs  Scoreboard.hs  Service.hs  Spock.hs  Version.hs  View.hs
boris-http/template/: build.hbs  builds.hbs  commit.hbs  configure.hbs  dashboard.hbs  frame-authenticated.hbs  frame.hbs  login.hbs  newproject.hbs  project.hbs  projects.hbs  scoreboard.hbs  server-error.hbs  settings.hbs  status.hbs
boris-http/templates/data/: build.mcn  commit.mcn  project.mcn
boris-http/templates/examples/layout/: page.prj
boris-http/templates/layout/: page.prj
boris-http/templates/page/: build.prj  builds.mcn  builds.prj  commit.prj  configure.prj  dashboard.prj  error.prj  login.prj  newproject.mcn  newproject.prj  not-found.prj  project.prj  projects.prj  scoreboard.prj  settings.prj  status.mcn  status.prj
boris-http/test/: test-io.hs  test.hs
boris-queue/: boris-queue.cabal  boris-queue.lock-7.10.2  boris-queue.lock-7.10.3  boris-queue.lock-7.8.4  boris-queue.lock-8.0.2  boris-queue.lock.7.8.4  master.toml
boris-queue/src/Boris/: Queue.hs
boris-queue/test/: test-io.hs  test.hs
boris-queue/test/Test/Boris/: Queue.hs
boris-representation/: boris-representation.cabal  boris-representation.lock-8.0.2  boris-representation.lock-8.2.1  boris-representation.lock-8.2.2
boris-representation/src/Boris/Representation/: ApiV1.hs
boris-representation/test/: test.hs
boris-service/: boris-service.cabal  boris-service.lock-7.10.2  boris-service.lock-7.10.3  boris-service.lock-7.8.4  boris-service.lock-7.8.4~fixup! fixup! fixup! fixup! Seven Ten.  boris-service.lock-8.0.2  boris-service.lock-8.2.2  boris-service.lock.7.8.4  boris-service.submodules  master.toml
boris-service/main/: boris-build.hs  boris-service.hs
boris-service/src/Boris/Service/: Boot.hs  Build.hs  Daemon.hs  Discover.hs  Git.hs  Guard.hs  Listener.hs  Log.hs  Remote.hs  Snooze.hs  Workspace.hs
boris-service/test/: test-io.hs  test.hs
boris-store/: boris-store.cabal  boris-store.lock-7.10.2  boris-store.lock-7.10.3  boris-store.lock-8.0.1  boris-store.submodules  mafia  master.toml
boris-store/src/Boris/Store/: Build.hs  Index.hs  Lifecycle.hs  Meta.hs  Results.hs  Schema.hs  Tick.hs
boris-store/test/: test-io.hs  test.hs
(+161 files in other folders)
