name:                  ambiata-boris-build
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           boris-build

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           >= 0.8        && < 1.3
                    , ambiata-boris-core
                    , ambiata-p
                    , ambiata-tine
                    , ambiata-twine
                    , ambiata-x-eithert
                    , async                           >= 2.0        && < 2.2
                    , bytestring                      == 0.10.*
                    , conduit                         == 1.2.*
                    , conduit-extra                   == 1.1.*
                    , directory                       == 1.2.*
                    , filepath                        >= 1.3        && < 1.5
                    , process                         >= 1.2        && < 1.7
                    , text                            == 1.2.*
                    , transformers                    >= 0.4        && < 0.6

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Boris.Build

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-build
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-tine
                    , QuickCheck                      >= 2.7        && < 2.10
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-build
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-tine
                    , ambiata-x-eithert
                    , conduit                         == 1.2.*
                    , conduit-extra                   == 1.1.*
                    , directory                       == 1.2.*
                    , filepath                        >= 1.3        && < 1.5
                    , process
                    , text
                    , temporary
                    , transformers
                    , QuickCheck                      >= 2.7        && < 2.10
                    , quickcheck-instances            == 0.3.*
