name:                  ambiata-boris-client
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           boris-client

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           == 0.8.*
                    , ambiata-boris-core
                    , ambiata-boris-store
                    , ambiata-jebediah
                    , ambiata-mismi-core
                    , ambiata-mismi-cloudwatch-logs
                    , ambiata-mismi-s3
                    , ambiata-p
                    , ambiata-snooze
                    , ambiata-snooze-baton
                    , ambiata-twine
                    , ambiata-x-aeson
                    , ambiata-x-eithert
                    , amazonka-dynamodb               == 1.3.6.*
                    , async                           == 2.0.*
                    , bytestring                      == 0.10.*
                    , conduit                         == 1.2.*
                    , conduit-extra                   == 1.1.*
                    , containers                      == 0.5.*
                    , directory                       == 1.2.*
                    , filepath                        == 1.3.*
                    , lens                            >= 4.6        && < 4.9
                    , http-client                     == 0.4.18.*
                    , http-types                      == 0.8.*
                    , mmorph                          == 1.0.*
                    , process                         == 1.2.*
                    , resourcet                       == 1.1.*
                    , semigroups                      == 0.16.*
                    , text                            == 1.2.*
                    , time                            == 1.4.*
                    , transformers                    == 0.4.*
                    , old-locale                      == 1.0.*
                    , unordered-containers            == 0.2.*
                    , ini                             == 0.3.3

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Boris.Client.Build
                    Boris.Client.Data
                    Boris.Client.Http
                    Boris.Client.Log
                    Boris.Client.Project

executable boris
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/boris.hs

  build-depends:
                      base
                    , ambiata-boris-core
                    , ambiata-boris-client
                    , ambiata-boris-store
                    , ambiata-mismi-core
                    , ambiata-p
                    , ambiata-snooze
                    , ambiata-snooze-baton
                    , ambiata-x-optparse
                    , ambiata-x-eithert
                    , conduit
                    , conduit-extra
                    , http-client
                    , optparse-applicative            == 0.11.*
                    , text
                    , transformers

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-client
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-p
                    , text
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*
