name:                  ambiata-boris-core
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           boris-core

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-x-htoml
                    , containers                      == 0.5.*
                    , htoml                           >= 0.1.0.3    && < 0.2
                    , lens                            >= 4.6        && < 4.9
                    , parsec                          == 3.1.*
                    , text                            == 1.2.*
                    , unordered-containers            == 0.2.*


  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Boris.Core.Data
                    Boris.Core.Serial.Ref
                    Boris.Core.Serial.Command

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text                            == 1.2.*
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*
