name: boris-core
version: 0.0.1
license: BSD3
author: Ambiata <info@ambiata.com>, Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2015 Ambiata. (c) 2019 Mark Hibberd
synopsis: project
category: System
cabal-version: >= 1.8
build-type: Simple
description: boris-core

library
  build-depends:
      base >= 3 && < 5
    , containers == 0.5.*
    , Glob == 0.10.*
    , lens >= 4.6 && < 4.18
    , filepath == 1.*
    , htoml == 1.0.*
    , parsec == 3.1.*
    , text == 1.2.*
    , time >= 1.5 && < 1.10
    , transformers >= 0.4 && < 0.6
    , transformers-bifunctors == 0.*
    , unordered-containers == 0.2.*
    , vector == 0.12.*

  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
    Boris.Core.Data.Agent
    Boris.Core.Data.Build
    Boris.Core.Data.Configuration
    Boris.Core.Data.Instance
    Boris.Core.Data.Log
    Boris.Core.Data.Project
    Boris.Core.Data.Repository
    Boris.Core.Data.Tenant
    Boris.Core.Data.Time
    Boris.Core.Data.Workspace
    Boris.Core.Serial.Ref
    Boris.Core.Serial.Command
    Boris.Core.Serial.Toml
    Boris.Prelude
    Boris.Prelude.EitherT

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  ghc-options: -Wall -threaded -O2
  hs-source-dirs: test
  other-modules:
    Test.Boris.Core.Gen
    Test.Boris.Core.Data.Build
    Test.Boris.Core.Serial.Command
    Test.Boris.Core.Serial.Ref
  build-depends:
      base >= 3 && < 5
    , boris-core
    , hedgehog == 0.6.*
    , text == 1.2.*
    , time >= 1.5 && < 1.10
