name: boris-git
version: 0.0.1
license: BSD3
author: Ambiata <info@ambiata.com>, Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2015 Ambiata. (c) 2019 Mark Hibberd
synopsis: project
category: System
cabal-version: >= 1.8
build-type: Simple
description: boris-git

library
  build-depends:
      base >= 3 && < 5
    , aeson == 1.*
    , boris-core
    , async == 2.*
    , bytestring == 0.10.*
    , conduit >= 1.2 && < 1.4
    , conduit-extra >= 1.1.11 && < 1.4
    , containers == 0.5.*
    , directory == 1.*
    , filepath == 1.*
    , mmorph == 1.*
    , mtl == 2.2.*
    , process == 1.*
    , resourcet == 1.2.*
    , text == 1.2.*
    , transformers >= 0.4 && < 0.6

  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
    Boris.Git

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  ghc-options: -Wall -threaded -O2
  hs-source-dirs:  test
  build-depends:
      base                            >= 3          && < 5
    , boris-core
    , boris-git
    , hedgehog == 0.6.*

test-suite test-io
  type: exitcode-stdio-1.0
  main-is: test-io.hs
  ghc-options: -Wall -threaded -O2
  hs-source-dirs: test
  build-depends:
      base >= 3 && < 5
    , boris-core
    , boris-core-test
    , boris-git
    , bytestring
    , conduit
    , conduit-extra
    , directory
    , filepath
    , process
    , text
    , temporary
    , hedgehog == 0.6.*
