name:                  ambiata-boris-http
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           boris-http

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           >= 0.8        && < 1.3
                    , ambiata-bmx
                    , ambiata-boris-core
                    , ambiata-boris-queue
                    , ambiata-boris-service
                    , ambiata-boris-representation
                    , ambiata-jebediah
                    , ambiata-mismi-core
                    , ambiata-mismi-cloudwatch-logs
                    , ambiata-mismi-s3
                    , ambiata-mismi-s3-core
                    , ambiata-p
                    , ambiata-snooze
                    , ambiata-spine
                    , ambiata-x-aeson
                    , ambiata-x-eithert
                    , amazonka-dynamodb               >= 1.3.6      && < 1.5
                    , async                           >= 2.0        && < 2.2
                    , base16-bytestring               == 0.1.*
                    , blaze-html                      == 0.8.*
                    , blaze-builder                   == 0.4.*
                    , bytestring                      == 0.10.*
                    , conduit                         == 1.2.*
                    , conduit-extra                   == 1.1.*
                    , containers                      == 0.5.*
                    , cryptonite                      == 0.*
                    , file-embed                      == 0.0.*
                    , http-client                     == 0.4.*
                    , http-client-tls                 == 0.2.*
                    , http-media                      == 0.6.*
                    , http-types                      == 0.8.*
                    , lens                            >= 4.6        && < 4.16
                    , mmorph                          == 1.0.*
                    , nest                            == 0.0.*
                    , postgresql-simple               == 0.5.*
                    , resourcet                       == 1.1.*
                    , semigroups                      >= 0.16       && < 0.19
                    , Spock-core                      == 0.12.*
                    , text                            == 1.2.*
                    , time                            >= 1.5        && < 1.7
                    , time-locale-compat              == 0.1.*
                    , traction                        == 0.*
                    , transformers                    >= 0.4        && < 0.6
                    , tz                              == 0.1.1.*
                    , unordered-containers            == 0.2.*
                    , vulcan                          == 0.*
                    , wai                             == 3.0.*
                    , wai-app-static                  == 3.1.*
                    , wai-extra                       == 3.0.*
                    , wai-middleware-static           == 0.8.*
                    , wai-middleware-static-embedded  == 0.1.*

                    , Cabal == 1.24.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Boris.Http.Api.Build
                    Boris.Http.Api.Discover
                    Boris.Http.Api.Project
                    Boris.Http.Api.Result

                    Boris.Http.Boot
                    Boris.Http.Data
                    Boris.Http.Route
                    Boris.Http.Spock
                    Boris.Http.Service

                    Boris.Http.Store.Api
                    Boris.Http.Store.Data
                    Boris.Http.Store.Error
                    Boris.Http.Store.Dynamo.Build
                    Boris.Http.Store.Dynamo.Lifecycle
                    Boris.Http.Store.Dynamo.Index
                    Boris.Http.Store.Dynamo.Schema
                    Boris.Http.Store.Dynamo.Tick
                    Boris.Http.Store.Dynamo.Results
                    Boris.Http.Store.Postgres.Schema
                    Boris.Http.Store.Postgres.Query

                    Boris.Http.View

executable boris-http
  ghc-options:
                    -Wall -threaded -O2
                    -rtsopts -with-rtsopts "-T -N"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/boris-http.hs

  build-depends:
                      base
                    , ambiata-boris-core
                    , ambiata-boris-http
                    , ambiata-boris-queue
                    , ambiata-mismi-core
                    , ambiata-mismi-dynamodb
                    , ambiata-mismi-s3
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , nest
                    , Spock-core
                    , text
                    , transformers
                    , warp

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , aeson
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-client
                    , ambiata-boris-http
                    , ambiata-boris-representation
                    , ambiata-boris-queue
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-snooze
                    , ambiata-x-eithert
                    , async
                    , containers
                    , hedgehog                        == 0.5.*
                    , http-client
                    , http-client-tls
                    , mmorph
                    , network
                    , Spock-core
                    , streaming-commons
                    , QuickCheck                      >= 2.7        && < 2.10
                    , quickcheck-instances            == 0.3.*
                    , warp

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-http
                    , ambiata-boris-queue
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-jebediah
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-p
                    , ambiata-spine
                    , ambiata-spine-test
                    , ambiata-x-eithert
                    , hedgehog                        == 0.5.*
                    , mmorph
                    , retry
                    , text
                    , traction
                    , QuickCheck                      >= 2.7        && < 2.10
                    , quickcheck-instances            == 0.3.*
